Fix poll break on SM

--- a/public/css/less/index.less
+++ b/public/css/less/index.less
@@ -58,28 +58,28 @@
 	Smallest Devices */
 @media(max-width:767px){
 	/* Column clear fix */
-	.col-lg-1:nth-child(12n+1),
-	.col-lg-2:nth-child(6n+1),
-	.col-lg-3:nth-child(4n+1),
-	.col-lg-4:nth-child(3n+1),
-	.col-lg-6:nth-child(2n+1),
-	.col-sm-1:nth-child(12n+1),
-	.col-sm-2:nth-child(6n+1),
-	.col-sm-3:nth-child(4n+1),
-	.col-sm-4:nth-child(3n+1),
-	.col-sm-6:nth-child(2n+1),
-	.col-md-1:nth-child(12n+1),
-	.col-md-2:nth-child(6n+1),
-	.col-md-3:nth-child(4n+1),
-	.col-md-4:nth-child(3n+1),
-	.col-md-6:nth-child(2n+1){
+	.clean-break.col-lg-1:nth-child(12n+1),
+	.clean-break.col-lg-2:nth-child(6n+1),
+	.clean-break.col-lg-3:nth-child(4n+1),
+	.clean-break.col-lg-4:nth-child(3n+1),
+	.clean-break.col-lg-6:nth-child(2n+1),
+	.clean-break.col-sm-1:nth-child(12n+1),
+	.clean-break.col-sm-2:nth-child(6n+1),
+	.clean-break.col-sm-3:nth-child(4n+1),
+	.clean-break.col-sm-4:nth-child(3n+1),
+	.clean-break.col-sm-6:nth-child(2n+1),
+	.clean-break.col-md-1:nth-child(12n+1),
+	.clean-break.col-md-2:nth-child(6n+1),
+	.clean-break.col-md-3:nth-child(4n+1),
+	.clean-break.col-md-4:nth-child(3n+1),
+	.clean-break.col-md-6:nth-child(2n+1){
 	clear: none;
 	}
-	.col-xs-1:nth-child(12n+1),
-	.col-xs-2:nth-child(6n+1),
-	.col-xs-3:nth-child(4n+1),
-	.col-xs-4:nth-child(3n+1),
-	.col-xs-6:nth-child(2n+1){
+	.clean-break.col-xs-1:nth-child(12n+1),
+	.clean-break.col-xs-2:nth-child(6n+1),
+	.clean-break.col-xs-3:nth-child(4n+1),
+	.clean-break.col-xs-4:nth-child(3n+1),
+	.clean-break.col-xs-6:nth-child(2n+1){
 	clear: left;
 	}
 }
@@ -88,28 +88,28 @@
 @media (min-width:767px){
 
 	/* Column clear fix */
-	.col-lg-1:nth-child(12n+1),
-	.col-lg-2:nth-child(6n+1),
-	.col-lg-3:nth-child(4n+1),
-	.col-lg-4:nth-child(3n+1),
-	.col-lg-6:nth-child(2n+1),
-	.col-md-1:nth-child(12n+1),
-	.col-md-2:nth-child(6n+1),
-	.col-md-3:nth-child(4n+1),
-	.col-md-4:nth-child(3n+1),
-	.col-md-6:nth-child(2n+1),
-	.col-xs-1:nth-child(12n+1),
-	.col-xs-2:nth-child(6n+1),
-	.col-xs-3:nth-child(4n+1),
-	.col-xs-4:nth-child(3n+1),
-	.col-xs-6:nth-child(2n+1){
+	.clean-break.col-lg-1:nth-child(12n+1),
+	.clean-break.col-lg-2:nth-child(6n+1),
+	.clean-break.col-lg-3:nth-child(4n+1),
+	.clean-break.col-lg-4:nth-child(3n+1),
+	.clean-break.col-lg-6:nth-child(2n+1),
+	.clean-break.col-md-1:nth-child(12n+1),
+	.clean-break.col-md-2:nth-child(6n+1),
+	.clean-break.col-md-3:nth-child(4n+1),
+	.clean-break.col-md-4:nth-child(3n+1),
+	.clean-break.col-md-6:nth-child(2n+1),
+	.clean-break.col-xs-1:nth-child(12n+1),
+	.clean-break.col-xs-2:nth-child(6n+1),
+	.clean-break.col-xs-3:nth-child(4n+1),
+	.clean-break.col-xs-4:nth-child(3n+1),
+	.clean-break.col-xs-6:nth-child(2n+1){
 	clear: none;
 	}
-	.col-sm-1:nth-child(12n+1),
-	.col-sm-2:nth-child(6n+1),
-	.col-sm-3:nth-child(4n+1),
-	.col-sm-4:nth-child(3n+1),
-	.col-sm-6:nth-child(2n+1){
+	.clean-break.col-sm-1:nth-child(12n+1),
+	.clean-break.col-sm-2:nth-child(6n+1),
+	.clean-break.col-sm-3:nth-child(4n+1),
+	.clean-break.col-sm-4:nth-child(3n+1),
+	.clean-break.col-sm-6:nth-child(2n+1){
 	clear: left;
 	}
 }
@@ -117,28 +117,28 @@
 @media (min-width:992px){
 
 	/* Column clear fix */
-	.col-lg-1:nth-child(12n+1),
-	.col-lg-2:nth-child(6n+1),
-	.col-lg-3:nth-child(4n+1),
-	.col-lg-4:nth-child(3n+1),
-	.col-lg-6:nth-child(2n+1),
-	.col-sm-1:nth-child(12n+1),
-	.col-sm-2:nth-child(6n+1),
-	.col-sm-3:nth-child(4n+1),
-	.col-sm-4:nth-child(3n+1),
-	.col-sm-6:nth-child(2n+1),
-	.col-xs-1:nth-child(12n+1),
-	.col-xs-2:nth-child(6n+1),
-	.col-xs-3:nth-child(4n+1),
-	.col-xs-4:nth-child(3n+1),
-	.col-xs-6:nth-child(2n+1){
+	.clean-break.col-lg-1:nth-child(12n+1),
+	.clean-break.col-lg-2:nth-child(6n+1),
+	.clean-break.col-lg-3:nth-child(4n+1),
+	.clean-break.col-lg-4:nth-child(3n+1),
+	.clean-break.col-lg-6:nth-child(2n+1),
+	.clean-break.col-sm-1:nth-child(12n+1),
+	.clean-break.col-sm-2:nth-child(6n+1),
+	.clean-break.col-sm-3:nth-child(4n+1),
+	.clean-break.col-sm-4:nth-child(3n+1),
+	.clean-break.col-sm-6:nth-child(2n+1),
+	.clean-break.col-xs-1:nth-child(12n+1),
+	.clean-break.col-xs-2:nth-child(6n+1),
+	.clean-break.col-xs-3:nth-child(4n+1),
+	.clean-break.col-xs-4:nth-child(3n+1),
+	.clean-break.col-xs-6:nth-child(2n+1){
 	clear: none;
 	}
-	.col-md-1:nth-child(12n+1),
-	.col-md-2:nth-child(6n+1),
-	.col-md-3:nth-child(4n+1),
-	.col-md-4:nth-child(3n+1),
-	.col-md-6:nth-child(2n+1){
+	.clean-break.col-md-1:nth-child(12n+1),
+	.clean-break.col-md-2:nth-child(6n+1),
+	.clean-break.col-md-3:nth-child(4n+1),
+	.clean-break.col-md-4:nth-child(3n+1),
+	.clean-break.col-md-6:nth-child(2n+1){
 	clear: left;
 	}
 }
@@ -146,28 +146,28 @@
 @media (min-width:1200px){
 
 	/* Column clear fix */
-	.col-md-1:nth-child(12n+1),
-	.col-md-2:nth-child(6n+1),
-	.col-md-3:nth-child(4n+1),
-	.col-md-4:nth-child(3n+1),
-	.col-md-6:nth-child(2n+1),
-	.col-sm-1:nth-child(12n+1),
-	.col-sm-2:nth-child(6n+1),
-	.col-sm-3:nth-child(4n+1),
-	.col-sm-4:nth-child(3n+1),
-	.col-sm-6:nth-child(2n+1),
-	.col-xs-1:nth-child(12n+1),
-	.col-xs-2:nth-child(6n+1),
-	.col-xs-3:nth-child(4n+1),
-	.col-xs-4:nth-child(3n+1),
-	.col-xs-6:nth-child(2n+1){
+	.clean-break.col-md-1:nth-child(12n+1),
+	.clean-break.col-md-2:nth-child(6n+1),
+	.clean-break.col-md-3:nth-child(4n+1),
+	.clean-break.col-md-4:nth-child(3n+1),
+	.clean-break.col-md-6:nth-child(2n+1),
+	.clean-break.col-sm-1:nth-child(12n+1),
+	.clean-break.col-sm-2:nth-child(6n+1),
+	.clean-break.col-sm-3:nth-child(4n+1),
+	.clean-break.col-sm-4:nth-child(3n+1),
+	.clean-break.col-sm-6:nth-child(2n+1),
+	.clean-break.col-xs-1:nth-child(12n+1),
+	.clean-break.col-xs-2:nth-child(6n+1),
+	.clean-break.col-xs-3:nth-child(4n+1),
+	.clean-break.col-xs-4:nth-child(3n+1),
+	.clean-break.col-xs-6:nth-child(2n+1){
 	clear: none;
 	}
-	.col-lg-1:nth-child(12n+1),
-	.col-lg-2:nth-child(6n+1),
-	.col-lg-3:nth-child(4n+1),
-	.col-lg-4:nth-child(3n+1),
-	.col-lg-6:nth-child(2n+1){
+	.clean-break.col-lg-1:nth-child(12n+1),
+	.clean-break.col-lg-2:nth-child(6n+1),
+	.clean-break.col-lg-3:nth-child(4n+1),
+	.clean-break.col-lg-4:nth-child(3n+1),
+	.clean-break.col-lg-6:nth-child(2n+1){
 	clear: left;
 	}
 }
